feat(icons): seperate location from other style for fonts

--- a/libs/icons/base/project.json
+++ b/libs/icons/base/project.json
@@ -122,7 +122,7 @@
       "options": {
         "src": "libs/icons/base/assets/16",
         "dist": "libs/icons/base/src/styles/icons-full",
-        "fontName": "prizmIconsFull",
+        "fontName": "prizm-icons-full",
         "css": true
       },
       "dependsOn": []
