--- a/apps/doc/project.json
+++ b/apps/doc/project.json
@@ -33,6 +33,16 @@
             "glob": "**/*",
             "input": "node_modules/@taiga-ui/icons/src",
             "output": "assets/taiga-ui/icons"
+          },
+          {
+            "glob": "**/*",
+            "input": "libs/icons/base/src/styles/icons-base",
+            "output": "assets/prizm/icons/base"
+          },
+          {
+            "glob": "**/*",
+            "input": "libs/icons/base/src/styles/icons-full",
+            "output": "assets/prizm/icons/full"
           }
         ],
         "styles": [
@@ -46,7 +56,13 @@
           "libs/components/src/styles/icons-16/icons-16.less",
           "node_modules/prismjs/themes/prism-okaidia.css",
           "node_modules/prismjs/plugins/line-numbers/prism-line-numbers.css",
-          "libs/icons/base/src/styles/styles.less"
+          "libs/icons/base/src/styles/styles.less",
+
+          "libs/icons/base/src/styles/icons-base/prizm-base-icons.css",
+          "libs/icons/base/src/styles/icons-base/prizm-base-icons-location.css",
+
+          "libs/icons/base/src/styles/icons-full/prizm-full-icons.css",
+          "libs/icons/base/src/styles/icons-full/prizm-full-icons-location.css"
         ],
         "scripts": [
           "node_modules/marked/bin/marked.js",
