--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "marked": "^9.0.0",
     "ngx-markdown": "17.1.1",
     "ngx-mask": "17.0.4",
+    "oslllo-svg-fixer": "^3.0.0",
     "rxjs": "7.8.1",
     "tar-stream": "~2.2.0",
     "ts-morph": "^18.0.0",
@@ -138,6 +139,7 @@
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-angular": "^4.1.0",
     "eslint-plugin-cypress": "2.15.1",
+    "fantasticon": "^2.0.0",
     "husky": "^7.0.0",
     "icon-font-buildr": "^1.3.4",
     "jest": "29.5.0",
