--- a/apps/doc/src/app/code-demo/files/src/app/app.component.html.template
+++ b/apps/doc/src/app/code-demo/files/src/app/app.component.html.template
@@ -1,4 +1,4 @@
 <p>{{ angular }}</p>
 <p>{{ prizm }}</p>
 
-<button prizmButton [icon]="'account-card-details'">Hello Prizm!</button>
+<button prizmButton [icon]="'user-card'">Hello Prizm!</button>
