--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -11,9 +11,9 @@
     "experimentalDecorators": true,
     "typeRoots": ["node_modules/@types"],
     "importHelpers": true,
-    "target": "es2015",
+    "target": "es2019",
     "module": "esnext",
-    "lib": ["es2017", "dom", "ES2021.String"],
+    "lib": ["es2017", "es2018", "es2019", "dom", "ES2021.String"],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "strictNullChecks": true,
