--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,17 @@
 {
   "hosting": [
     {
+      "target": "v4",
+      "public": "dist/apps/doc",
+      "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+      "rewrites": [
+        {
+          "source": "**",
+          "destination": "/index.html"
+        }
+      ]
+    },
+    {
       "target": "v3",
       "public": "dist/apps/doc",
       "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
