--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,9 +41,9 @@ Build js image:
   before_script:
     - echo $DOCKER_AUTH_CONFIG > /kaniko/.docker/config.json
   script:
-    - cat ${NPMRC_CONFIG} > .npmrc
-    - echo "_auth=$NPM_AUTH_TOKEN" >> .npmrc
-    - cat .npmrc
+    # - cat ${NPMRC_CONFIG} > .npmrc
+    # - echo "_auth=$NPM_AUTH_TOKEN" >> .npmrc
+    # - cat .npmrc
     - sh /kaniko/kaniko-build
   image:
     name: '$KANIKO_IMAGE'
