feat(icons): update generator

--- a/libs/icons/base/project.json
+++ b/libs/icons/base/project.json
@@ -144,6 +144,7 @@
         "pathToFolder": "libs/icons/base/base/source",
         "pathToOutputFile": "libs/icons/base/base/lazy-icon-set.ts",
         "prefix": "prizmIcons-",
+        "createNgPackage": false,
         "exportName": "PRIZM_ICONS_LAZY_SET",
 
         "generateIconSet": true,
@@ -158,6 +159,7 @@
         "pathToFolder": "libs/icons/base/full/source",
         "pathToOutputFile": "libs/icons/base/full/lazy-icon-set.ts",
         "prefix": "prizmIcons-",
+        "createNgPackage": false,
         "exportName": "PRIZM_ICONS_FULL_LAZY_SET",
 
         "generateIconSet": true,
