--- a/libs/helpers/package.json
+++ b/libs/helpers/package.json
@@ -9,9 +9,7 @@
     "registry": "https://registry.npmjs.org/"
   },
   "peerDependencies": {
-    "@angular/common": "^17.1.0",
-    "@angular/forms": "^17.1.0",
-    "@angular/core": "^17.1.0"
+    "@prizm-ui/helpers": "^4.0.0"
   },
   "dependencies": {
     "tslib": "^2.3.0"
