--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -34,13 +34,17 @@
       "@prizm-ui/helpers": ["libs/helpers/src/index.ts"],
       "@prizm-ui/i18n": ["libs/i18n/src/index.ts"],
       "@prizm-ui/icons": ["libs/icons/base/src/index.ts"],
+      "@prizm-ui/icons-loader": ["libs/icons/loader/src/index.ts"],
+      "@prizm-ui/icons-loader/full": ["libs/icons/loader/full/src/index.ts"],
       "@prizm-ui/icons/base": ["libs/icons/base/base/index.ts"],
+      "@prizm-ui/icons/base/names": ["libs/icons/base/base/names/index.ts"],
       "@prizm-ui/icons/base/source": ["libs/icons/base/base/source/index.ts"],
       "@prizm-ui/icons/base/source/*": ["libs/icons/base/base/source/*"],
       "@prizm-ui/icons/core": ["libs/icons/base/core/src/index.ts"],
       "@prizm-ui/icons/full": ["libs/icons/base/full/index.ts"],
-      "@prizm-ui/icons/full/source/*": ["libs/icons/base/full/source/*"],
+      "@prizm-ui/icons/full/names": ["libs/icons/base/full/names/index.ts"],
       "@prizm-ui/icons/full/source": ["libs/icons/base/full/source/index.ts"],
+      "@prizm-ui/icons/full/source/*": ["libs/icons/base/full/source/*"],
       "@prizm-ui/nx-plugin": ["libs/plugin/src/index.ts"],
       "@prizm-ui/theme": ["libs/theme/src/index.ts"],
       "@prizm/test": ["libs/test/src/index.ts"],
