feat: update tags for npm delpoy ci pipelines for v3 version

--- a/.github/workflows/main-publish-ng16.yml
+++ b/.github/workflows/main-publish-ng16.yml
@@ -132,7 +132,7 @@ jobs:
           name: dist
           path: ./dist
 
-      - run: cd dist/libs/components && npm publish --access public --verbose
+      - run: cd dist/libs/components && npm publish --tag ng16 --access public --verbose
 
   publish-i18n:
     needs: build
@@ -160,7 +160,7 @@ jobs:
           name: dist
           path: ./dist
 
-      - run: cd dist/libs/i18n && npm publish --access public --verbose
+      - run: cd dist/libs/i18n && npm publish --tag ng16  --access public --verbose
 
   publish-helpers:
     needs: build
@@ -188,7 +188,7 @@ jobs:
           name: dist
           path: ./dist
 
-      - run: cd dist/libs/helpers && npm publish --access public --verbose
+      - run: cd dist/libs/helpers && npm publish --tag ng16  --access public --verbose
 
   publish-core:
     needs: build
@@ -216,7 +216,7 @@ jobs:
           name: dist
           path: ./dist
 
-      - run: cd dist/libs/core && npm publish --access public --verbose
+      - run: cd dist/libs/core && npm publish --tag ng16  --access public --verbose
 
   publish-theme:
     needs: build
@@ -244,7 +244,7 @@ jobs:
           name: dist
           path: ./dist
 
-      - run: cd dist/libs/theme && npm publish --access public --verbose
+      - run: cd dist/libs/theme && npm publish --tag ng16  --access public --verbose
 
   publish-icons:
     needs: build
@@ -272,7 +272,7 @@ jobs:
           name: dist
           path: ./dist
 
-      - run: cd dist/libs/icons/base && npm publish --access public --verbose
+      - run: cd dist/libs/icons/base && npm publish --tag ng16  --access public --verbose
 
   publish-flags:
     needs: build
@@ -300,7 +300,7 @@ jobs:
           name: dist
           path: ./dist
 
-      - run: cd dist/libs/icons/flags && npm publish --access public --verbose
+      - run: cd dist/libs/icons/flags && npm publish --tag ng16  --access public --verbose
 
   publish-plugin:
     needs: build
@@ -328,7 +328,7 @@ jobs:
           name: dist
           path: ./dist
 
-      - run: cd dist/libs/plugin && npm publish --access public --verbose
+      - run: cd dist/libs/plugin && npm publish --tag ng16  --access public --verbose
 
   publish-ast:
     needs: build
@@ -356,7 +356,7 @@ jobs:
           name: dist
           path: ./dist
 
-      - run: cd dist/libs/ast && npm publish --access public --verbose
+      - run: cd dist/libs/ast && npm publish --tag ng16  --access public --verbose
 
   publish-charts:
     needs: build
@@ -384,7 +384,7 @@ jobs:
           name: dist
           path: ./dist
 
-      - run: cd dist/libs/charts && npm publish --access public --verbose
+      - run: cd dist/libs/charts && npm publish --tag ng16  --access public --verbose
 
   publish-nxmv:
     needs: build
@@ -412,4 +412,4 @@ jobs:
           name: dist
           path: ./dist
 
-      - run: cd dist/libs/nxmv && npm publish --access public --verbose
+      - run: cd dist/libs/nxmv && npm publish --tag ng16  --access public --verbose
