--- a/.github/workflows/pr-ng15.yml
+++ b/.github/workflows/pr-ng15.yml
@@ -1,8 +1,10 @@
 name: PR NG 15
 on:
-  pull_request_target:
-    branches:
-      - main
+  workflow_dispatch:
+  workflow_call:
+#  pull_request_target:
+#    branches:
+#      - main
 jobs:
   doc_deploy:
     runs-on: ubuntu-latest
@@ -49,7 +51,7 @@ jobs:
 
       - name: 'Increase max memory limit'
         run: |
-          export NODE_OPTIONS="--max_old_space_size=4096"
+          export NODE_OPTIONS="--max_old_space_size=8192"
 
       - name: 'Set version 15'
         run: npx nx generate @prizm-ui/nx-mv:apply -n v15
@@ -115,7 +117,7 @@ jobs:
 
       - name: 'Increase max memory limit'
         run: |
-          export NODE_OPTIONS="--max_old_space_size=4096"
+          export NODE_OPTIONS="--max_old_space_size=8192"
 
       #      - run: npx nx workspace-lint
       #      - run: npx nx clear-cache
