--- a/.github/workflows/pr-ng17.yml
+++ b/.github/workflows/pr-ng17.yml
@@ -3,6 +3,8 @@ on:
   pull_request_target:
     branches:
       - main
+env:
+  NX_NO_CLOUD: 'true'
 jobs:
   doc_deploy:
     runs-on: ubuntu-latest
