--- a/.github/workflows/deploy-main-doc-ng17.yml
+++ b/.github/workflows/deploy-main-doc-ng17.yml
@@ -95,7 +95,7 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
 
       - name: 'Build doc app for firebase hosting'
-        run: npm run build:doc
+        run: echo 'test main doc' && npm run build:doc
 
       - name: Deploy doc to firebase
         uses: FirebaseExtended/action-hosting-deploy@v0
