--- a/.github/workflows/pr-ng17.yml
+++ b/.github/workflows/pr-ng17.yml
@@ -60,7 +60,7 @@ jobs:
         run: npx nx reset
 
       - name: 'Build doc app for firebase hosting'
-        run: echo 'test' && npm run build:doc
+        run: npm run build:doc
 
       - name: 'Upload to Firebase HOSTING (ng17)'
         uses: FirebaseExtended/action-hosting-deploy@v0
