--- a/.github/workflows/deploy-main-doc-ng17.yml
+++ b/.github/workflows/deploy-main-doc-ng17.yml
@@ -91,7 +91,7 @@ jobs:
       - name: 'Build doc app for firebase hosting'
         run: npm run build:doc
 
-      - name: Deploy doc to firebase
+      - name: Deploy doc to firebase (v4)
         uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
@@ -99,3 +99,12 @@ jobs:
           projectId: prizmui
           channelId: live
           target: v4
+
+      - name: Deploy doc to firebase (main)
+        uses: FirebaseExtended/action-hosting-deploy@v0
+        with:
+          repoToken: '${{ secrets.GITHUB_TOKEN }}'
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_PRIZMUI }}'
+          projectId: prizmui
+          channelId: live
+          target: main
