feat: for v4 added deploy to main doc after v4

--- a/.github/workflows/deploy-main-doc-ng17.yml
+++ b/.github/workflows/deploy-main-doc-ng17.yml
@@ -1,5 +1,5 @@
 # TODO: later change tag by input variable ${{ inputs.tag }}
-name: Deploy doc main 17
+name: Deploy doc main 17 (v4 and main)
 on:
   workflow_dispatch:
   workflow_call:
