feat: added checker commit messages for #1622

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lint:doc": "nx lint doc",
     "test:doc": "nx test doc",
     "lint:next": "nx lint next",
+    "commit": "commit",
     "test:next": "nx test next",
     "lint:icons": "nx lint icons",
     "test:icons": "nx test icons",
@@ -96,8 +97,9 @@
     "@angular/cli": "~17.0.0",
     "@angular/compiler-cli": "^17.1.0",
     "@angular/language-service": "^17.1.0",
-    "@commitlint/cli": "^17.4.2",
-    "@commitlint/config-conventional": "^17.4.2",
+    "@commitlint/cli": "^17.8.1",
+    "@commitlint/config-conventional": "^17.8.1",
+    "@commitlint/prompt-cli": "^19.2.2",
     "@nikolastojicic/prettier-plugin-organize-attributes": "^0.1.0",
     "@nrwl/eslint-plugin-nx": "17.2.8",
     "@nx/cypress": "17.2.8",
