fix: stackblitz template files for open private demo

--- a/apps/doc/src/app/code-demo/files/src/app/shared.module.ts.template
+++ b/apps/doc/src/app/code-demo/files/src/app/shared.module.ts.template
@@ -73,9 +73,11 @@ import {
   PrizmChartsTreemapModule,
   PrizmChartsWaterfallModule,
 } from '@prizm-ui/charts';
+import { PrizmIfLanguageDirective } from '@prizm-ui/i18n';
 
 @NgModule({
   imports: [
+    PrizmIfLanguageDirective,
     // for base variant
     PrizmIconsComponent,
     // for full variant
@@ -155,6 +157,7 @@ import {
     PrizmChartsWaterfallModule,
   ],
   exports: [
+    PrizmIfLanguageDirective,
     PrizmIconsSvgComponent,
     // for base variant
     PrizmIconsComponent,
