--- a/apps/doc/src/app/code-demo/files/src/app/app.module.ts.template
+++ b/apps/doc/src/app/code-demo/files/src/app/app.module.ts.template
@@ -5,9 +5,13 @@ import { FormsModule } from '@angular/forms';
 import { AppComponent } from './app.component';
 import { AppRoutingModule } from './app-routing.module';
 import { SharedModuleModule } from './shared.module';
+import { BrowserAnimationsModule } from '@angular/platform-browser/animations';
+import { HttpClientModule } from '@angular/common/http';
 
 @NgModule({
-  imports: [BrowserModule, FormsModule, AppRoutingModule, SharedModuleModule],
+  imports: [BrowserModule,
+    HttpClientModule,
+    BrowserAnimationsModule, FormsModule, AppRoutingModule, SharedModuleModule],
   declarations: [AppComponent],
   bootstrap: [AppComponent],
 })
