fix: remove stackblits for version < 4

--- a/apps/doc/src/app/code-demo/files/src/app/app.module.ts.template
+++ b/apps/doc/src/app/code-demo/files/src/app/app.module.ts.template
@@ -1,6 +1,6 @@
 import { NgModule } from '@angular/core';
 import { BrowserModule } from '@angular/platform-browser';
-import { FormsModule } from '@angular/forms';
+import { FormsModule, ReactiveFormsModule } from '@angular/forms';
 
 import { AppComponent } from './app.component';
 import { AppRoutingModule } from './app-routing.module';
@@ -11,7 +11,7 @@ import { HttpClientModule } from '@angular/common/http';
 @NgModule({
   imports: [BrowserModule,
     HttpClientModule,
-    BrowserAnimationsModule, FormsModule, AppRoutingModule, SharedModuleModule],
+    BrowserAnimationsModule, FormsModule, ReactiveFormsModule, AppRoutingModule, SharedModuleModule],
   declarations: [AppComponent],
   bootstrap: [AppComponent],
 })
