--- a/apps/doc/src/app/code-demo/files/src/app/app.module.ts.template
+++ b/apps/doc/src/app/code-demo/files/src/app/app.module.ts.template
@@ -4,14 +4,14 @@ import { FormsModule, ReactiveFormsModule } from '@angular/forms';
 
 import { AppComponent } from './app.component';
 import { AppRoutingModule } from './app-routing.module';
-import { SharedModuleModule } from './shared.module';
+import { SharedModule } from './shared.module';
 import { BrowserAnimationsModule } from '@angular/platform-browser/animations';
 import { HttpClientModule } from '@angular/common/http';
 
 @NgModule({
   imports: [BrowserModule,
     HttpClientModule,
-    BrowserAnimationsModule, FormsModule, ReactiveFormsModule, AppRoutingModule, SharedModuleModule],
+    BrowserAnimationsModule, FormsModule, ReactiveFormsModule, AppRoutingModule, SharedModule],
   declarations: [AppComponent],
   bootstrap: [AppComponent],
 })
