--- a/apps/doc/src/app/code-demo/files/src/index.html.template
+++ b/apps/doc/src/app/code-demo/files/src/index.html.template
@@ -1,1 +1,13 @@
-<my-app>loading</my-app>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <title>Prizm Doc Demo</title>
+  <base href="/" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<link rel="icon" type="image/x-icon" href="favicon.ico" />
+  </head>
+  <body>
+    <my-app>loading</my-app>
+  </body>
+  </html>
