--- a/libs/icons/base/tsconfig.lib.json
+++ b/libs/icons/base/tsconfig.lib.json
@@ -11,5 +11,5 @@
     "useDefineForClassFields": false
   },
   "exclude": ["test-setup.ts", "**/*.spec.ts", "jest.config.ts"],
-  "include": ["**/*.ts"]
+  "include": ["**/*.ts", "base/source/**/*", "full/source/**/*"]
 }
