--- a/libs/icons/loader/package.json
+++ b/libs/icons/loader/package.json
@@ -1,13 +1,17 @@
 {
   "name": "@prizm-ui/icons-loader",
   "version": "4.3.0",
+  "private": false,
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
+  },
   "peerDependencies": {
     "@angular/common": "^17.1.0",
     "@angular/core": "^17.1.0",
-    "@prizm-ui/icons": "^4.1.2"
+    "@prizm-ui/icons": "^4.3.0"
   },
   "dependencies": {
     "tslib": "^2.3.0"
-  },
-  "sideEffects": false
+  }
 }
