feat(chore): updated ci #000

--- a/.github/workflows/pr-ng17.yml
+++ b/.github/workflows/pr-ng17.yml
@@ -1,8 +1,10 @@
 name: PR NG 17
 on:
+  workflow_dispatch:
+  workflow_call:
   pull_request_target:
     branches:
-      - main
+      - v4
 jobs:
   doc_deploy:
     runs-on: ubuntu-latest
