--- a/.github/workflows/pr-ng16.yml
+++ b/.github/workflows/pr-ng16.yml
@@ -2,9 +2,9 @@ name: PR NG 16
 on:
   workflow_dispatch:
   workflow_call:
-#  pull_request_target:
-#    branches:
-#      - main
+  pull_request_target:
+    branches:
+      - v3
 jobs:
   doc_deploy:
     runs-on: ubuntu-latest
