--- a/.github/workflows/pr-ng18.yml
+++ b/.github/workflows/pr-ng18.yml
@@ -1,5 +1,7 @@
 name: PR NG 18
 on:
+  workflow_dispatch:
+  workflow_call:
   pull_request_target:
     branches:
       - main
@@ -120,7 +122,7 @@ jobs:
       #      - run: npx nx workspace-lint
       #      - run: npx nx clear-cache
 
-      - name: 'Set version 18'
+      - name: 'Set version 17'
         run: npx nx generate @prizm-ui/nx-mv:apply -n v18
 
       - name: 'Clears all the cached Nx artifacts and metadata '
