fix(chore): v4 pr update on merging to main #000

--- a/.github/workflows/pr-ng17.yml
+++ b/.github/workflows/pr-ng17.yml
@@ -4,7 +4,7 @@ on:
   workflow_call:
   pull_request_target:
     branches:
-      - v4
+      - main
 jobs:
   doc_deploy:
     runs-on: ubuntu-latest
