--- a/.github/workflows/deploy-main-doc-ng17.yml
+++ b/.github/workflows/deploy-main-doc-ng17.yml
@@ -29,14 +29,14 @@ jobs:
         uses: actions/cache/restore@v3
         with:
           path: ./node_modules
-          key: ${{ runner.os }}-node_modules_ng_17-${{ hashFiles('package-lock.json.ng17') }}
+          key: ${{ runner.os }}-node_modules_ng_17-${{ hashFiles('package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-node_modules_ng_17-
 
-      - name: 'Initial changes 17'
-        run: |
-          cp -f package.json.ng17 package.json
-          cp -f package-lock.json.ng17 package-lock.json
+      #      - name: 'Initial changes 17'
+      #        run: |
+      #          cp -f package.json package.json
+      #          cp -f package-lock.json package-lock.json
 
       - name: Install dependencies
         if: steps.cache-restore.outputs.cache-hit != 'true'
@@ -72,7 +72,7 @@ jobs:
         uses: actions/cache/restore@v3
         with:
           path: ./node_modules
-          key: ${{ runner.os }}-node_modules_ng_17-${{ hashFiles('package-lock.json.ng17') }}
+          key: ${{ runner.os }}-node_modules_ng_17-${{ hashFiles('package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-node_modules_ng_17-
 
@@ -85,8 +85,8 @@ jobs:
         run: |
           export NODE_OPTIONS="--max_old_space_size=8192"
 
-      - name: 'Set version 17'
-        run: npx nx generate @prizm-ui/nx-mv:apply -n v17
+      #      - name: 'Set version 17'
+      #        run: npx nx generate @prizm-ui/nx-mv:apply -n v17
 
       - name: 'Build doc app for firebase hosting'
         run: npm run build:doc
