--- a/.github/workflows/pr-ng17.yml
+++ b/.github/workflows/pr-ng17.yml
@@ -96,10 +96,10 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node_modules_ng_17-
 
-      - name: 'Initial changes 17'
-        run: |
-          cp -f package.json package.json
-          cp -f package-lock.json package-lock.json
+      #      - name: 'Initial changes 17'
+      #        run: |
+      #          cp -f package.json package.json
+      #          cp -f package-lock.json package-lock.json
 
       - name: Install dependencies
         if: steps.cache-restore.outputs.cache-hit != 'true'
