feat(charts): removed modules #000

--- a/apps/doc/src/app/code-demo/files/src/app/shared.module.ts.template
+++ b/apps/doc/src/app/code-demo/files/src/app/shared.module.ts.template
@@ -70,12 +70,12 @@ import {
   PrizmChartsBarModule,
   PrizmChartsGaugeModule,
   PrizmChartsLineModule,
-  PrizmChartsPieModule,
-  PrizmChartsRadarModule,
-  PrizmChartsRadialBarModule,
-  PrizmChartsScatterModule,
-  PrizmChartsTreemapModule,
-  PrizmChartsWaterfallModule,
+  PrizmChartsPieComponent,
+  PrizmChartsRadarComponent,
+  PrizmChartsRadialBarComponent,
+  PrizmChartsScatterComponent,
+  PrizmChartsTreemapComponent,
+  PrizmChartsWaterfallComponent,
 } from '@prizm-ui/charts';
 import { PrizmIfLanguageDirective } from '@prizm-ui/i18n';
 import { PrizmFlagIconsComponent } from '@prizm-ui/flag-icons';
@@ -159,12 +159,12 @@ import { PrizmFlagIconsComponent } from '@prizm-ui/flag-icons';
     PrizmChartsBarModule,
     PrizmChartsLineModule,
     PrizmChartsGaugeModule,
-    PrizmChartsPieModule,
-    PrizmChartsRadarModule,
-    PrizmChartsRadialBarModule,
-    PrizmChartsScatterModule,
-    PrizmChartsTreemapModule,
-    PrizmChartsWaterfallModule,
+    PrizmChartsPieComponent,
+    PrizmChartsRadarComponent,
+    PrizmChartsRadialBarComponent,
+    PrizmChartsScatterComponent,
+    PrizmChartsTreemapComponent,
+    PrizmChartsWaterfallComponent,
   ],
   exports: [
     PrizmCounterComponent,
@@ -245,12 +245,12 @@ import { PrizmFlagIconsComponent } from '@prizm-ui/flag-icons';
     PrizmChartsBarModule,
     PrizmChartsLineModule,
     PrizmChartsGaugeModule,
-    PrizmChartsPieModule,
-    PrizmChartsRadarModule,
-    PrizmChartsRadialBarModule,
-    PrizmChartsScatterModule,
-    PrizmChartsTreemapModule,
-    PrizmChartsWaterfallModule,
+    PrizmChartsPieComponent,
+    PrizmChartsRadarComponent,
+    PrizmChartsRadialBarComponent,
+    PrizmChartsScatterComponent,
+    PrizmChartsTreemapComponent,
+    PrizmChartsWaterfallComponent,
   ],
 })
 export class SharedModule {}
