--- a/package.json
+++ b/package.json
@@ -44,16 +44,16 @@
   "dependencies": {
     "@angular-builders/custom-webpack": "^18.0.0-beta.3",
     "@angular-extensions/svg-icons-builder": "^3.0.0",
-    "@angular/animations": "18.0.1",
-    "@angular/cdk": "18.0.1",
-    "@angular/common": "18.0.1",
-    "@angular/compiler": "18.0.1",
-    "@angular/core": "18.0.1",
-    "@angular/forms": "18.0.1",
-    "@angular/localize": "18.0.1",
-    "@angular/platform-browser": "18.0.1",
-    "@angular/platform-browser-dynamic": "18.0.1",
-    "@angular/router": "18.0.1",
+    "@angular/animations": "18.1.3",
+    "@angular/cdk": "18.1.3",
+    "@angular/common": "18.1.3",
+    "@angular/compiler": "18.1.3",
+    "@angular/core": "18.1.3",
+    "@angular/forms": "18.1.3",
+    "@angular/localize": "18.1.3",
+    "@angular/platform-browser": "18.1.3",
+    "@angular/platform-browser-dynamic": "18.1.3",
+    "@angular/router": "18.1.3",
     "@antv/g2plot": "^2.4.31",
     "@compodoc/compodoc": "^1.1.15",
     "@ng-web-apis/common": "^3.0.0",
@@ -62,9 +62,9 @@
     "@ng-web-apis/resize-observer": "^3.0.0",
     "@ngneat/elf": "^2.5.0",
     "@ngneat/elf-persist-state": "^1.2.0",
-    "@nx/angular": "19.1.1",
+    "@nx/angular": "19.5.6",
     "@stackblitz/sdk": "^1.9.0",
-    "@swc/helpers": "^0.5.3",
+    "@swc/helpers": "0.5.12",
     "@tinkoff/ng-dompurify": "^3.0.0",
     "@tinkoff/ng-polymorpheus": "^4.0.10",
     "@yarnpkg/parsers": "~3.0.0-rc.27",
@@ -88,33 +88,33 @@
     "zone.js": "0.14.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "18.0.2",
-    "@angular-devkit/core": "18.0.2",
-    "@angular-devkit/schematics": "18.0.2",
-    "@angular-eslint/eslint-plugin": "17.3.0",
-    "@angular-eslint/eslint-plugin-template": "17.3.0",
-    "@angular-eslint/template-parser": "17.3.0",
-    "@angular/cli": "~17.1.0",
-    "@angular/compiler-cli": "18.0.1",
-    "@angular/language-service": "18.0.1",
+    "@angular-devkit/build-angular": "18.1.3",
+    "@angular-devkit/core": "18.1.3",
+    "@angular-devkit/schematics": "18.1.3",
+    "@angular-eslint/eslint-plugin": "18.2.0",
+    "@angular-eslint/eslint-plugin-template": "18.2.0",
+    "@angular-eslint/template-parser": "18.2.0",
+    "@angular/cli": "~18.1.0",
+    "@angular/compiler-cli": "18.1.3",
+    "@angular/language-service": "18.1.3",
     "@commitlint/cli": "^17.8.1",
     "@commitlint/config-conventional": "^17.8.1",
     "@commitlint/prompt-cli": "^19.2.2",
     "@nikolastojicic/prettier-plugin-organize-attributes": "^0.1.0",
-    "@nrwl/eslint-plugin-nx": "19.1.1",
-    "@nx/cypress": "19.1.1",
-    "@nx/devkit": "19.1.1",
-    "@nx/jest": "19.1.1",
-    "@nx/js": "19.1.1",
-    "@nx/linter": "19.1.1",
-    "@nx/node": "19.1.1",
-    "@nx/plugin": "19.1.1",
-    "@nx/workspace": "19.1.1",
+    "@nrwl/eslint-plugin-nx": "19.5.6",
+    "@nx/cypress": "19.5.6",
+    "@nx/devkit": "19.5.6",
+    "@nx/jest": "19.5.6",
+    "@nx/js": "19.5.6",
+    "@nx/linter": "19.5.6",
+    "@nx/node": "19.5.6",
+    "@nx/plugin": "19.5.6",
+    "@nx/workspace": "19.5.6",
     "@prizm-ui/nx-mv": "^4.0.1-next.1",
-    "@schematics/angular": "18.0.2",
-    "@swc-node/register": "1.8.0",
+    "@schematics/angular": "18.1.3",
+    "@swc-node/register": "1.9.2",
     "@swc/cli": "0.3.12",
-    "@swc/core": "1.3.104",
+    "@swc/core": "1.5.7",
     "@taiga-ui/addon-doc": "^3.69.0",
     "@taiga-ui/addon-mobile": "^3.69.0",
     "@taiga-ui/cdk": "^3.69.0",
@@ -129,8 +129,9 @@
     "@types/mock-fs": "^4.13.1",
     "@types/node": "18.16.9",
     "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "7.9.0",
-    "@typescript-eslint/parser": "7.9.0",
+    "@typescript-eslint/eslint-plugin": "7.18.0",
+    "@typescript-eslint/parser": "7.18.0",
+    "@typescript-eslint/utils": "^7.16.0",
     "@yarnpkg/parsers": "~3.0.0-rc.27",
     "autoprefixer": "^10.4.0",
     "cypress": "^8.7.0",
@@ -153,8 +154,8 @@
     "markdown-it": "^14.0.0",
     "mock-fs": "^5.2.0",
     "ng-morph": "^2.1.3",
-    "ng-packagr": "18.0.0",
-    "nx": "19.1.1",
+    "ng-packagr": "18.1.0",
+    "nx": "19.5.6",
     "postcss": "^8.4.5",
     "postcss-import": "14.1.0",
     "postcss-preset-env": "7.5.0",
@@ -168,7 +169,7 @@
     "ts-jest": "29.1.1",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
-    "typescript": "5.4.5",
+    "typescript": "5.5.4",
     "webpack-bundle-analyzer": "^4.10.1"
   },
   "volta": {
